# CPP_HOMEWORK_2022-2023

homework1/: CMakeLists.txt  Task03.cpp  matrices.txt  sorting.cpp  task01.cpp  task02.cpp  task04.cpp  task05.cpp  task06.cpp
