cmake_minimum_required(VERSION 3.23)
project(homework1)

set(CMAKE_CXX_STANDARD 14)


add_executable(task01 task01.cpp)
add_executable(task02 task02.cpp)
add_executable(task03 task03.cpp)
add_executable(task04 task04.cpp)
add_executable(task05 task05.cpp)
add_executable(task_matrices task06.cpp)
add_executable(templateSwap templateSwap.cpp)
add_executable(testPtr testPtr.cpp)
add_executable(sortOfArray sorting.cpp)


